@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = intl dbus util src conf man po 
+SUBDIRS = intl dbus util src conf debian/initramfs debian/initramfs/upstart-jobs/ man po 
 
 EXTRA_DIST = config.rpath
 
