@@ -1,0 +1,4 @@
+## Process this file with automake to produce Makefile.in
+
+initramfs_hook_configdir = /usr/share/initramfs-tools/hooks
+dist_initramfs_hook_config_DATA = mountall.initramfs-hook
