@@ -1,0 +1,35 @@
+# mountall - Mount filesystems on boot
+#
+# This helper mounts filesystems in the correct order as the devices
+# and mountpoints become available.
+
+description	"Mount filesystems on boot"
+
+start on stopping boot-premount
+# the job of initramfs and mountall is to just mount /root
+stop on mounted MOUNTPOINT=/root
+# if device is not yet ready a console shall be presented and all the rest of
+# the scripts shall stop execution. When the device becomes available, mountall
+# shall end up mounting the root device and shall emit mounted MOUNTPOINT=/root
+
+expect daemon
+task
+
+emits virtual-filesystems
+emits local-filesystems
+emits remote-filesystems
+emits all-swaps
+emits filesystem
+emits mounting
+emits mounted
+emits device-not-ready
+
+# temporary, until we have progress indication
+# and output capture (next week :p)
+console output
+
+exec mountall --daemon --debug
+
+post-stop script
+	echo "In the post-stop script for mountall"
+end script
